# tlslib.py

./: LICENSE.cpython  Makefile  README.md  pyproject.toml  stdlib.py  tlslib.py
.github/: release.yml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
src/examples/asyncio_example/: base_events_tls.py  selector_events_tls.py  tls_echo_client.py  tls_echo_server.py  tlsproto.py  unix_events_tls.py
src/examples/asyncio_example/cert/: key.pem  leaf.pem  root.pem
src/tlslib/: __init__.py  insecure.py  stdlib.py  tlslib.py
src/tlslib/insecure/: __init__.py  stdlib_insecure.py
test/: _utils.py  test_init.py  test_insecure.py  test_stdlib.py  test_tlslib.py
test/assets/: rfc5280::nc::nc-permits-email-exact.json  webpki::san::exact-dns-san.json  webpki::san::exact-localhost-dns-san.json  webpki::san::exact-localhost-ip-san.json  webpki::san::exact-san.json  webpki::san::no-san.json
