[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tlslib"
dynamic = ["version"]
description = "An example MVP for the updated PEP 543 proposal"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["truststore"]
requires-python = ">=3.12"

[project.optional-dependencies]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pytest-subtests", "pretend", "coverage[toml]"]
lint = [
    "ruff",
    "mypy >= 1.0",
    "types-html5lib",
    "types-requests",
    "types-toml",
    "interrogate >= 1.7",
]
dev = ["tlslib[doc,test,lint]", "twine", "wheel", "build"]

[project.urls]
Homepage = "https://pypi.org/project/tlslib"
Documentation = "https://trailofbits.github.io/tlslib.py/"
Issues = "https://github.com/trailofbits/tlslib.py/issues"
Source = "https://github.com/trailofbits/tlslib.py"

[tool.flit.module]
name = "tlslib"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/tlslib/_cli.py"]

[tool.mypy]
mypy_path = "src"
packages = "tlslib"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "src/tlslib/_cli.py", "src/examples"]
ignore-semiprivate = true
fail-under = 100
